--- a/package.json
+++ b/package.json
@@ -11,29 +11,34 @@
     "test:watch": "vitest --watch"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "better-auth": "^1.3.34",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "react-hook-form": "^7.66.0",
+    "react-router": "^7.9.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
     "@react-router/remix-routes-option-adapter": "^7.9.6",
+    "@tailwindcss/vite": "^4.1.13",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
-    "jsdom": "^26.0.0",
-    "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "jsdom": "^26.0.0",
+    "prisma": "^6.19.0",
     "remix-flat-routes": "^0.8.5",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
-    "vitest": "^2.1.8",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
